[gd_scene load_steps=16 format=3 uid="uid://baow87b6rrpvl"]

[ext_resource type="PackedScene" uid="uid://cyvu5q0tccd4b" path="res://Player/weapon/ALL/Shield/shield.fbx" id="1_dmnlx"]
[ext_resource type="Shader" uid="uid://lm1gw4o3cyyh" path="res://shaders/ursc_1.3.0/addons/ursc/spatial/standard_opaque.gdshader" id="2_0vxx4"]
[ext_resource type="Script" uid="uid://bdj1wfqnsi1rd" path="res://shield.gd" id="2_xc41h"]
[ext_resource type="Texture2D" uid="uid://b72jrpuincm02" path="res://Player/weapon/ALL/Shield/color/uncolored/Material_Base_color.png" id="3_4re53"]
[ext_resource type="Script" uid="uid://bb3ghyy64k2bd" path="res://addons/godot_state_charts/state_chart.gd" id="5_41k7r"]
[ext_resource type="Script" uid="uid://clt3bkcujiepo" path="res://addons/godot_state_charts/compound_state.gd" id="6_gdxae"]
[ext_resource type="Script" uid="uid://1xhujeketj0r" path="res://addons/godot_state_charts/atomic_state.gd" id="7_275sl"]
[ext_resource type="Script" uid="uid://8kg3tepcr415" path="res://addons/godot_state_charts/transition.gd" id="8_275sl"]
[ext_resource type="Script" uid="uid://dt5v7opc2p6id" path="res://shield_idle.gd" id="9_kjr8o"]
[ext_resource type="Script" uid="uid://npfkamo7drt1" path="res://shield_raised.gd" id="10_vivl0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_275sl"]
render_priority = 0
shader = ExtResource("2_0vxx4")
shader_parameter/albedo_color = Color(1, 1, 1, 1)
shader_parameter/albedo_texture = ExtResource("3_4re53")
shader_parameter/albedo_texture_as_primary_color = true
shader_parameter/mix_factor = 1.0
shader_parameter/texture_lod_halve_distance_override = 0.0
shader_parameter/uv_offset = Vector2(0, 0)
shader_parameter/uv_scale = Vector2(1, 1)
shader_parameter/uv_scroll_speed = Vector2(0, 0)
shader_parameter/cull_distance_override = 0.0
shader_parameter/convert_vertex_colors = false

[sub_resource type="Animation" id="Animation_kjr8o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cube:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cube:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.5708, 0, -3.14159)]
}

[sub_resource type="Animation" id="Animation_vivl0"]
resource_name = "blocked"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cube:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0991167),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.34, 0.082, 0.152), Vector3(0.34, 0.082, 0.202)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cube:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0833333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, -0.137881, -2.96706), Vector3(-1.43117, -1.5708, -1.5708)]
}

[sub_resource type="Animation" id="Animation_275sl"]
resource_name = "raise_shield"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cube:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.34, 0.082, 0.152)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cube:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, 0, -3.14159), Vector3(-1.5708, -0.137881, -2.96706)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vivl0"]
_data = {
&"RESET": SubResource("Animation_kjr8o"),
&"blocked": SubResource("Animation_vivl0"),
&"raise_shield": SubResource("Animation_275sl")
}

[node name="shield" instance=ExtResource("1_dmnlx")]
script = ExtResource("2_xc41h")

[node name="Cube" parent="." index="0"]
transform = Transform3D(-40, 4.84296e-05, 0, 3.67093e-10, 6.91527e-05, 40, 0.000101407, 19.103, -0.0001448, 0, 0, 0)
layers = 2
surface_material_override/0 = SubResource("ShaderMaterial_275sl")

[node name="StateChart" type="Node" parent="." index="1"]
script = ExtResource("5_41k7r")
metadata/_custom_type_script = "uid://bb3ghyy64k2bd"

[node name="CompoundState" type="Node" parent="StateChart" index="0"]
script = ExtResource("6_gdxae")
initial_state = NodePath("idle")

[node name="idle" type="Node" parent="StateChart/CompoundState" index="0"]
script = ExtResource("7_275sl")

[node name="to_raised" type="Node" parent="StateChart/CompoundState/idle" index="0"]
script = ExtResource("8_275sl")
to = NodePath("../../raised")
event = &"secondary_attack"
delay_in_seconds = "0.0"

[node name="idle" type="Node" parent="StateChart/CompoundState/idle" index="1"]
script = ExtResource("9_kjr8o")

[node name="raised" type="Node" parent="StateChart/CompoundState" index="1"]
script = ExtResource("7_275sl")

[node name="to_idle" type="Node" parent="StateChart/CompoundState/raised" index="0"]
script = ExtResource("8_275sl")
to = NodePath("../../idle")
event = &"secondary_released"
delay_in_seconds = "0.0
"

[node name="raised" type="Node" parent="StateChart/CompoundState/raised" index="1" node_paths=PackedStringArray("weapon")]
script = ExtResource("10_vivl0")
weapon = NodePath("../../../../Cube")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
libraries = {
&"": SubResource("AnimationLibrary_vivl0")
}

[connection signal="state_entered" from="StateChart/CompoundState/idle" to="StateChart/CompoundState/idle/idle" method="_on_idle_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/idle" to="StateChart/CompoundState/idle/idle" method="_on_idle_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/idle" to="StateChart/CompoundState/idle/idle" method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/raised" to="StateChart/CompoundState/raised/raised" method="_on_raised_state_entered"]
[connection signal="state_exited" from="StateChart/CompoundState/raised" to="StateChart/CompoundState/raised/raised" method="_on_raised_state_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/raised" to="StateChart/CompoundState/raised/raised" method="_on_raised_state_processing"]
